--- a/DB/rasp/MyFile.ini
+++ b/DB/rasp/MyFile.ini
@@ -1,2 +1,3 @@
 [DB]
-URL=C:\Users\imuko_000\Desktop\Compleate\DB\uchebadb\DEMO.GDB
+URL=C:\Users\Михаил\Desktop\Compleate\Compleate\DB\uchebadb\demo.gdb
+;C:\Users\imuko_000\Desktop\Compleate\DB\uchebadb\DEMO.GDB
