--- a/DB/rasp/MyFile.ini
+++ b/DB/rasp/MyFile.ini
@@ -1,3 +1,2 @@
 [DB]
-URL=C:\Users\Михаил\Desktop\Compleate\Compleate\DB\uchebadb\demo.gdb
-;C:\Users\imuko_000\Desktop\Compleate\DB\uchebadb\DEMO.GDB
+URL=C:\Users\misha\Desktop\Compleate\DB\uchebadb\demo1.gdb
